handle OAUTHBEARER connection